<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.36">
  <GVL Name="G_IO" Id="{02d66863-e417-4b72-99eb-de1b59a2b786}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	
END_VAR

VAR_GLOBAL
	
	// specify network type
	// 100 					: ISA110.11a iMesh calibration
	// 101 					: ISA110.11a iMesh TESIM
	// 102 					: ISA110.11a iMesh test signals
	// 110					: ISA100.11a iMesh PN Sequence generation
	
	// 200 					: PhoenixContact calibration
	// 201					: PhoenixContact TESIM
	// 202					: PhoenixContact test signals
	// 210					: ISA100.11a PC OneLink PN Sequence generation
	
	NET_TYPE				:	DINT := 0;
	GO						:	BOOL := FALSE;
	MODE					:	UINT := 1;
	
	// operating time
	OPTIME					:	LREAL := 0.0;
	
	// for the current-based control solutions
	XMEAS_IO_IOUT	AT %Q*		:	ARRAY[1..4] OF INT;
	XMEAS_IO_IIN	AT %I*		:	ARRAY[1..4] OF INT;
	XMV_IO_IOUT		AT %Q*		:	ARRAY[1..4] OF INT;
	XMV_IO_IIN		AT %I*		:	ARRAY[1..4] OF INT;
	
	// for the voltage-based control solutions
	XMEAS_IO_VOUT 	AT %Q*		:	ARRAY[1..8] OF INT;
	
	// XMEAS reported by tesim
	XMEAS						:	ARRAY[1..41] OF LREAL;
	XMEAS_RX					:	ARRAY[1..41] OF LREAL;
	
	// XMEAS seen by the network
	MBS_XMEAS_RAW				:	ARRAY[1..4] OF REAL;
	MBS_XMEAS					:	ARRAY[1..4] OF REAL;
	MBS_XMEAS_CAL_OFFSET		:	ARRAY[1..4] OF REAL := [0.0215, 0.0175, 0.0195, 0.0216];

	// XMV values reported by tesim
	XMV							:	ARRAY[1..12] OF LREAL;
	XMV_RX						:	ARRAY[1..12] OF LREAL;
	
	// XMV seen by the network
	//NET_XMV_RAW						:	ARRAY[1..4] OF LREAL;
	NET_XMV							:	ARRAY[1..4] OF REAL;
	
	// setpoints
	PROD_RATE					:	LREAL;
	P_REACTOR					:	LREAL;
	L_REACTOR					:	LREAL;
	T_REACTOR					:	LREAL;
	PCT_G_SP					:	LREAL;
	L_SEPARATOR					:	LREAL;
	L_STRIPPER					:	LREAL;
	
	// filtered (smoothed) values
	P_REACTOR_SM					:	LREAL;
	
	// production metrics
	COST						:	LREAL :=0.0;
	PctG						:	LREAL :=0.0;
	
	// disturbances as set in tesim
	IDV							:	ARRAY[1..20] OF DINT;
	
	// shutdown indicator
	SD_FLAG						: 	BOOL	:= FALSE;
	
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>