<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.36">
  <GVL Name="G_PARAMS" Id="{3b9a06b5-e024-4474-8f53-bae8a479db56}">
    <Declaration><![CDATA[VAR_GLOBAL
	IOUT_WD_MAX	:	INT		:=32767;
	IOUT_WD_MIN	:	INT		:=0;
	VOUT_WD_MAX	:	INT		:=32767;
	VOUT_WD_MIN	:	INT		:=0;
	
	// XMEAS RANGES
	A_FLOW_MAX 		:	LREAL	:=10.0;
	D_FLOW_MAX		:	LREAL	:=7500.0;
	E_FLOW_MAX		:	LREAL	:=7500.0;
	AC_FLOW_MAX		:	LREAL	:=50.0;
	P_REACTOR_MAX	:	LREAL	:=3000.0;
	
	A_FLOW_MIN 		:	LREAL	:=0.0;
	D_FLOW_MIN		:	LREAL	:=0.0;
	E_FLOW_MIN		:	LREAL	:=0.0;
	AC_FLOW_MIN		:	LREAL	:=0.0;
	P_REACTOR_MIN	:	LREAL	:=0.0;
	
	// XMV RANGES
	A_FLOW_VALVE_MAX	: LREAL	:=100.0;
	D_FLOW_VALVE_MAX	: LREAL	:=100.0;
	E_FLOW_VALVE_MAX	: LREAL	:=100.0;
	REACTOR_CWFV_MAX	: LREAL	:=100.0;
	
	A_FLOW_VALVE_MIN	: LREAL			:=0.0;
	D_FLOW_VALVE_MIN	: LREAL			:=0.0;
	E_FLOW_VALVE_MIN	: LREAL			:=0.0;
	REACTOR_CWFV_MIN	: LREAL			:=0.0;
	
	// Device limits
	VOUT_MAX		:	LREAL	:=10.0;
	VOUT_MIN		:	LREAL	:=0.0;
	IOUT_MAX		:	LREAL	:=20.0;
	IOUT_MIN		:	LREAL	:=4.0;
	

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>